syntax = "proto3";

package job;

option go_package = "job-search-service/proto/job";

service JobService {
  rpc CreateJob(CreateJobRequest) returns (CreateJobResponse);
  rpc SearchJobs(SearchJobsRequest) returns (SearchJobsResponse);
  rpc GetJob(GetJobRequest) returns (GetJobResponse);
  rpc DeleteJob(DeleteJobRequest) returns (DeleteJobResponse);
}

message Job {
  string id = 1;
  string title = 2;
  string description = 3;
  string company = 4;
  string location = 5;
  repeated string skills = 6;
  double salary = 7;
  string created_at = 8;
  double score = 9;
}

message CreateJobRequest {
  string title = 1;
  string description = 2;
  string company = 3;
  string location = 4;
  repeated string skills = 5;
  double salary = 6;
}

message CreateJobResponse {
  string id = 1;
  string message = 2;
}

message SearchJobsRequest {
  string query = 1;
  string location = 2;
  repeated string skills = 3;
}

message SearchJobsResponse {
  repeated Job jobs = 1;
  int32 total = 2;
}

message GetJobRequest {
  string id = 1;
}

message GetJobResponse {
  Job job = 1;
}

message DeleteJobRequest {
  string id = 1;
}

message DeleteJobResponse {
  string message = 1;
}
